src/frontend/styles/components/shared_widgets.styl
// File containing style for widgets that are shared across all other widgets
if !IS_EXTENSION
  ::-webkit-scrollbar
    width: 0.5em
    height: 0.5em
    background-color: transparent

  ::-webkit-scrollbar-corner
    background-color: colors-ui-surface-panel

  ::-webkit-scrollbar:hover
    background-color: transparent

  ::-webkit-scrollbar-thumb:vertical,
  ::-webkit-scrollbar-thumb:horizontal
    background-color: colors-ui-surface-primary-tertiary

  // TODO: Ask Niky for a constant in mapped for the color
  ::-webkit-scrollbar-thumb:vertical:active,
  ::-webkit-scrollbar-thumb:horizontal:active
    background-color: WEBKIT_SCROLLER_THUMB_ACTIVE_BACKGROUND_COLOR

@font-face {
  font-family: 'SpaceGrotesk';
  src: url('../../public/resources/fonts/space_grotesk/SpaceGrotesk-VariableFont_wght.ttf') format('truetype');
}

@font-face {
  font-family: "FiraCode";
  src: url('../../public/resources/fonts/fira_code/FiraCode-VariableFont_wght.ttf') format('truetype');
}

if IS_EXTENSION
  .component-container-html
    height: -webkit-fill-available !important

  .component-container-body
    height: inherit
    overflow: hidden

  .sidebar-menu-body
    display: flex
    flex-direction: column
    justify-content: start
    background-color: var(--vscode-sideBar-background)

  .sidebar-menu-header
    font-weight: 700 !important
    margin: 8px
    padding-left: 12px
    background: var(--vscode-sideBar-background)

  .sidebar-menu-items
    font-weight: 400 !important
    margin-top: 8px !important
    cursor: pointer

    div
      &:hover
        background: var(--vscode-button-secondaryBackground)

    .sidebar-menu-item
      padding-left: 20px
      padding-right: 16px
      padding-top: 8px
      padding-bottom: 8px
      border-bottom: 1px solid var(--vscode-editorWidget-border)

input::-webkit-input-placeholder
  color: INPUT_PLACEHOLDER_COLOR;

input:-moz-placeholder
  color: INPUT_PLACEHOLDER_COLOR

input::-moz-placeholder
  color: INPUT_PLACEHOLDER_COLOR

TRACE_LOG_EDITOR_Z_INDEX = 50

.hidden
  display: none !important

// TODO: Maybe move to another file?
.chart-line
  width: 100%
  height: 100%
  position: relative

.chart-results-container
  height: inherit
  width: inherit
  position: relative

  .view-inactive
    display: none
    visibility: hidden

.chartjs-render-monitor
  width: 100% !important
  height: 100% !important
  min-height: 170px

html, body
  padding: 0
  margin: 0
  if !IS_EXTENSION
    overflow: hidden

body
  font-family: -apple-system, 'Helvetica Neue', Helvetica, sans-serif !important
  background-color: colors-ui-surface-primary-default !important

[data-tippy-root]
  max-width: calc(100vw - 0.625em)

.tippy-box
  border-radius: 0.25em
  font-size: inherit

  &[data-placement^="top"] > .tippy-arrow::before
    bottom: -0.4375em
    border-width: 0.5em 0.5em 0

  &[data-placement^="bottom"] > .tippy-arrow::before
    top: -0.4375em
    border-width: 0 0.5em 0.5em

  &[data-placement^="left"] > .tippy-arrow::before
    right: -0.4375em
    border-width: 0.5em 0 0.5em 0.5em

  &[data-placement^="right"] > .tippy-arrow::before
    left: -0.4375em
    border-width: 0.5em 0.5em 0.5em 0

.tippy-arrow
  width: 1em
  height: 1em

.tippy-content
  padding: 0.3125em 0.5625em

.separate-bar
  width: 0px
  height: 1em
  margin-top: 0.4em
  border-left: 0.12em solid colors-ui-separator-default

// .wrapper
//   input
//     margin-left: 0 !important

// input
//   font-family: "SpaceGrotesk" !important
//   font-size: 14px !important
//   font-style: normal !important
//   font-weight: 400 !important
//   color: TEXT_CONTENT_COLOR
//   height: 28px
//   // font-size: 17px !important
//   border: 0
//   background-color: HEADER_ELEMENT_BACKGROUND_COLOR
//   if IS_EXTENSION
//     width: -webkit-fill-available
//   else
//     width: calc(100% - 6px)
//     margin-right: 8px
//   margin-left: 8px !important
//   margin-bottom: 5px !important
//   border-radius: 6px
//   padding-left: 24px
//   padding-bottom: 0px !important
//   padding-top: 0px !important
//   overflow: hidden !important
//   text-overflow: ellipsis !important
//   white-space: nowrap !important
//   border: 1px solid INPUT_BORDER_COLOR !important
//   background-image: INPUT_DEFAULT_SEARCH_ICON !important
//   background-repeat: no-repeat !important
//   background-position: 8px center !important
//   background-size: 12px 12px !important

//   &:focus
//     outline: 0px solid BORDERS_COLOR !important
//     border: 1px solid INPUT_FOCUSED_BORDER_COLOR !important
//     overflow: hidden !important
//     text-overflow: ellipsis !important
//     white-space: nowrap !important

#root-container
  // padding 0.25em
  position: fixed
  height: calc(100vh - 2.27em - 2em)
  top: 2.27em
  left: 0
  right: 0
  z-index: 0
  display: flex
  flex-direction: column
  padding-left: 0
  padding-right: 0

#ROOT
  background-color: colors-ui-surface-primary-default !important
  color: TEXT_CONTENT_COLOR
  height: 100%
  width: calc(100vw - 0.5em)
  position: relative
  padding-right: 0.25em
  padding-left: 0.25em

#main
  font-size: 20px
  display: flex
  flex-wrap: wrap
  flex-direction: row
  width: 100%

#dock
  height: 80%

.highlight
  background-color: HIGHLIGHT_COLOR !important

.value-expanded-compound::before
  content: ''
  position: absolute
  left: 0.72em
  top: 1.25em
  bottom: 0
  width: 0.0625em
  background-color: VALUE_TYPE_COLOR
  opacity: 0.2

.value-load-more-button
  width: 100%

// TODO: Fix it?
.component-container
  font-family: "FiraCode" !important
  font-size: inherit !important
  line-height: 1.5em !important
  font-weight: 400 !important
  width: 100%
  height: 100%
  // if !IS_EXTENSION
  //   box-shadow: inset 2px 0px 0px 0px LAYOUT_SPLITTER_COLOR

  &:focus
    outline: 0px

.hovered
  opacity: 0.6

.panel
  font-size: 18px
  border-color: COLOR
  border-width: 1px
  border-style: solid
  overflow: hidden
  display: flex

.r
  opacity: 1

.panel-width
  flex-basis 100%
  flex-direction column
  display flex
  width 100%

.selector
  position: absolute
  opacity: 0.5
  z-index: 22
  background-color: #555
  display: none

.absolute-panel
  position: absolute

.unselectable
  user-select: none
  #trace-query
    height: 18px
    font-size: 16px

.dataTables_filter
  display: none

#trace-q
  width: 100%

.searched-token
  background-color: SEARCHED_TOKEN_COLOR

.indeterminate-checkmark
  border: 1px solid BORDERS_COLOR
  border-radius: 2.5px
  display: flex
  position: absolute
  top: 5px
  left: 0
  width: 15px
  height: 15px
  background-color: DROPDOWN_LIST_BACKGROUND_COLOR

.indeterminate-checkmark::after
  content: "-"
  display: flex
  position: relative
  align-items: center
  transform: translateX(4px)

.checkbox
  display:none
  width: 20px !important
  margin-left: 0 !important
  margin-right: 5

  &::after
    content: ""
    position: absolute
    display: none

.checkmark::after
  content: "";
  position: absolute;
  display: none;


input:checked ~ .checkmark:after
  display: block

.code-tooltip
  display: block
  padding-left: 4px
  padding-right: 4px
  width: fit-content
  font-size: 14px
  line-height: 24px
  overflow-wrap: normal
  max-width: calc(100% - 8px)
  position: absolute
  background-color: PRIMARY_BASE
  z-index: 3
  font-family: "FiraCode"
  margin-bottom: 0
  list-style-type: none
  opacity: 0
  visibility: hidden
  transition: opacity 0.3s ease-in-out
  white-space: normal
  pointer-events: none
  border-radius: 6px

  .active-line
    .excerpt-code
      color: ACTIVE_COLOR_FG !important
    background: ACTIVE_COLOR_BG
    border-radius: 4px
    width: fit-content
    padding-right: 4px

  li
    padding-left: 4px

.checkmark
  border: 0.5px solid CHECKMARK_BORDERS_COLOR
  border-radius: 2.5px
  display:block
  position: absolute
  top: 6px
  left: 0
  width: 14px
  height: 14px
  background-color: DROPDOWN_LIST_BACKGROUND_COLOR

  &::after
    left: 3.6px;
    if IS_EXTENSION
      top: 0px;
    else
      top: 1.6px;
    width: 6px;
    height: 8px;
    border: solid DROPDOWN_CHECKMARK_COLOR;
    border-width: 0 2px 2px 0;
    border-radius: 2px
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);

.dropdown-list
  border-radius: 0.325em
  background: DROPDOWN_LIST_FOCUSED_BACKGROUND_COLOR
  color: DROPDOWN_TEXT_BACKGROUND_COLOR
  display: flex
  flex-direction: column
  // border: 1px solid BORDERS_COLOR
  // padding-top: 5px
  // padding-left: 10px
  // padding-bottom: 5px
  // padding-right: 10px
  margin-top: 0.24em
  right: 0
  min-width: fit-content
  position: relative
  z-index: TRACE_LOG_EDITOR_Z_INDEX + 7
  user-select: none

  &-item
    position: relative
    color: DROPDOWN_TEXT_FOCUSED_COLOR
    user-select: none
    list-style-type: none
    width: 100%
    // height: 24px
    // margin-bottom: 5px
    cursor: pointer
    overflow: hidden
    text-overflow: ellipsis
    white-space: nowrap
    font-weight: bold
    display: flex
    align-items: center
    justify-content: center

.hamburger-dropdown + .dropdown-list.active
  width: fit-content

// .layout-buttons-container-wrapper
//   outline: 4px solid PRIMARY_BASE

.layout-buttons-container
  width: 1.7em !important
  height: 1.7em !important
  background-color: SECONDARY_BASE
  border-radius: 0.36em
  background-image: ct-images-layout-tab
  background-size:  1em
  background-repeat: no-repeat
  background-position: center
  cursor: pointer

  &:hover
    background-color: ACTIVE_LAYOUT_BUTTONS_BACKGROUND

  &.active
    background-image: ct-images-layout-tab-active
    background-color: ACTIVE_LAYOUT_BUTTONS_BACKGROUND

  .layout-dropdown
    width: fit-content;
    position: absolute;
    top: 100%
    right: 0px;
    background-color: DROPDOWN_BASE
    border-radius: 6px
    font-family: "SpaceGrotesk"
    line-height: normal
    color: PRIMARY_TEXT_COLOR
    font-weight: 400
    padding: 4px

    .layout-dropdown-node
      border-radius: 4px
      padding-left: 4px
      padding-right: 4px

      &:hover
        background-color: ACTIVE_MENU_BACKGROUND



.run-trace-button
  .custom-tooltip
    right: 0px

    &:after
      left: 90%

.eventLog-medium-control-button
  .custom-tooltip
    overflow-wrap: normal
    white-space: normal

.custom-noir-icon::before
  content: url("../../public/resources/shared/noir_logo_dark_theme.svg")
  display: block
  width: 1em
  height: 1em
  position: absolute
  transform: translate(0.24em, 0.24em)

.empty-overlay
  display: flex
  width: inherit
  height: inherit
  justify-content: center
  align-items: center
  font-family: 'FiraCode'
  // font-size: 14px
  // padding-left: 12px
  // padding-right: 12px
  text-align: center
  // white-space: break-spaces

.jstree-default-contextmenu
  display: none !important
  visibility: hidden !important

